# structured_light_scanner

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  bench-testing.md
docs/hardware/: handheld-rig.md
firmware/trigger_pico/: README.md  main.py
scripts/: sync_sweep.py
sls/: __init__.py  cli.py
sls/calib/: intrinsics.py  stereo.py
sls/capture/: camera.py  session.py  trigger.py
sls/process/: laser.py  pipeline.py  pointcloud.py  register.py  triangulate.py
sls/viz/: bench.py  preview.py  web_preview.py
tests/: test_bench.py  test_laser.py  test_pointcloud.py  test_triangulate.py  test_trigger_phases.py
