[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-light-scanner"
version = "0.1.0"
description = "Handheld structured-light scanner: dual OV9281 + crossed line lasers, stereo triangulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-contrib-python>=4.9",
    "pyserial>=3.5",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sls = "sls.cli:main"

[tool.setuptools.packages.find]
include = ["sls*"]
